--- a/output/phormer_tests/phorm_tests.html
+++ b/output/phormer_tests/phorm_tests.html
@@ -7,7 +7,7 @@
 	<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="../qunit-1.14.0.js"></script>
 	<script src="phorm.js"></script>
-	<script src="phorm_tests.js"></script>
+	<script src="tests_phormer.js"></script>
 </head>
 <body>
 	<div id="qunit"></div>
