--- a/output/phormer_tests/concolic.htm
+++ b/output/phormer_tests/concolic.htm
@@ -1,1 +1,1 @@
-<!DOCTYPE html> <html> <head> <script src="phorm_instrumented.js"> </script> </head> <body> <div id="confixTestFixture"> </div> </body> </html>
+<!DOCTYPE html> <html> <head> <script src="phorm_instrumented.js"> </script> <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script></head> <body> <div id="confixTestFixture"> </div> </body> </html>
