--- a/output/test.html
+++ b/output/test.html
@@ -7,7 +7,8 @@
 	<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="qunit-1.14.0.js"></script>
 	<script src="fileToTest.js"></script>
-	<script src="tests.js"></script>
+	<script src="phormer_tests/phorm.js"></script>
+	<script src="tests_phormer.js"></script>
 </head>
 <body>
 	<div id="qunit"></div>
