--- a/input/Colors/concolic.htm
+++ b/input/Colors/concolic.htm
@@ -1,1 +1,1 @@
-<!DOCTYPE html> <html> <head> <script src="game_instrumented.js"> </script> <script src="jquery-1.11.0.min.js"></script></head> <body> <div id="confixTestFixture"> </div> </body> </html>
+<!DOCTYPE html> <html> <head> <script src="colorsgame_instrumented.js"> </script> <script src="jquery-1.11.0.min.js"></script></head> <body> <div id="confixTestFixture"> </div> </body> </html>
