no jscover used instrumentation

--- a/input/phormer/concolic.htm
+++ b/input/phormer/concolic.htm
@@ -1,1 +1,1 @@
-<!DOCTYPE html> <html> <head> <script src="help_instrumented.js"> </script> <script src="jquery-1.11.0.min.js"></script></head> <body> <div id="confixTestFixture"> </div> </body> </html>
+<!DOCTYPE html> <html> <head> <script src="addPhoto_instrumented.js"> </script> <script src="jquery-1.11.0.min.js"></script></head> <body> <div id="confixTestFixture"> </div> </body> </html>
